# espionage

./: .gitignore  .replit  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  index.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  crunch42-analysis.yml
docs/reports/: CONSOLE.md  JSON.md
espionage/: __init__.py  constants.py  main.py
espionage/console/: __init__.py  c_davailable.py  c_dbdata.py  c_ddns.py  c_dhistory.py  c_main.py  input.py
espionage/modules/: __init__.py
espionage/modules/extra/: __init__.py  banner.py  url_parser.py
espionage/modules/osint/: __init__.py  dns_history.py  domain_available.py  domain_big_data.py
espionage/modules/parser/: __init__.py  url_parser.py
espionage/modules/website/: __init__.py  detailed_dns.py  technologies.py
espionage/modules/whois/: domain_big_data.py
espionage/tests/: __init__.py  test_da.py  test_dbd.py  tests.py
tests/: test_detailed_dns.py
