[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool]
[tool.poetry]
authors = ["Muhammad Abdullah <iamabdullahmughal@gmail.com>"]
description = "A basic python based tool for domain ℹ️ information gathering. I am working 💻 on  collecting information related to domain whois, history, dns records, web technologies and records from web. Feel free to drop a suggestion 💡"
name = "espionage"
version = "0.0.4"
[tool.poetry.dependencies]
beautifulsoup4 = "4.10.0"
lxml = "4.7.1"
python = "^3.8"
requests = "2.26.0"
rich = "10.16.1"
bs4 = "^0.0.1"
